# PrincetonRaceCarROS2

remote_ws/src/interface/: CMakeLists.txt  package.xml
remote_ws/src/interface/cfg/: sim_params.yaml
remote_ws/src/interface/launch/: simulation_launch.py  visualization_launch.py
remote_ws/src/interface/rviz/: simulation.rviz  truck.rviz
remote_ws/src/interface/script/: simulation_node.py  traffic_simulation_node.py  visualization_node.py
remote_ws/src/interface/script/simulator/: ros_utility.py  simulator.py  traffic_simulator.py
remote_ws/src/labs/planning/: CMakeLists.txt  setup.py
remote_ws/src/labs/planning/configs/: lab2_task2.yaml
remote_ws/src/labs/planning/launch/: ilqr_simulation.launch.py  ilqr_truck.launch.py  lab2_task1.launch.py
remote_ws/src/labs/planning/scripts/: traj_planner.py
remote_ws/src/labs/planning/scripts/utils/: dyn_obstacle.py  policy.py
remote_ws/src/msgs/: CMakeLists.txt  README.md  package.xml
remote_ws/src/msgs/msg/: OdometryArray.msg  ServoMsg.msg  SetArray.msg
remote_ws/src/planning/: package.xml
remote_ws/src/planning/cfg/: planner.cfg
remote_ws/src/planning/launch/: lab2_task2.launch.py  lab2_truck.launch.py
remote_ws/src/planning/resource/: racecar_planner
remote_ws/src/planning/scripts/: traj_planning_node.py
remote_ws/src/planning/scripts/utils/: generate_pwm.py  ros_utility.py  static_obstacle.py
remote_ws/src/routing/: CMakeLists.txt  package.xml
remote_ws/src/routing/launch/: routing_launch.py
remote_ws/src/routing/script/: routing_node.py
remote_ws/src/routing/script/routing/: lanelet_wrapper.py  routing.py  util.py
