<package format="3">
  <name>racecar_msgs</name>
  <version>0.0.1</version>
  <description>
    Custom Messages for Princeton RaceCar
  </description>
  <maintainer email="zixuz@princeton.edu">Zixu Zhang</maintainer>
  <license>Apache-2.0</license>

  <!-- Use ament_cmake instead of catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 message dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- rosidl_default_generators: Used for building custom messages. -->
  <!-- rosidl_default_runtime: Ensures the messages are available at runtime. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
<!-- The <export> tag tells ROS 2 that this package uses ament_cmake for building.
This is required in ROS 2 to correctly build the package. -->
  
</package>
